<resources>
    <string name="app_name">LanchoneteDoZeApp</string>
    <string name="nome_do_produto">Nome do Produto</string>
    <string name="r_0_00">R$ 0,00</string>
    <string name="adicionar">Adicionar</string>
    <string name="ver_pedido">Ver Pedido</string>
    <string name="resumo_do_pedido">Resumo do Pedido</string>
    <string name="total_r_0_00">Total: R$ 0,00</string>
    <string name="confirmar_pedido_e_dar_baixa">Confirmar Pedido e Dar Baixa</string>
</resources>