<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/text_view_nome_produto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome_do_produto"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_view_preco_produto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/r_0_00"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button_adicionar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/adicionar" />
</LinearLayout>